--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </main>
 
   <!-- testimonial section  -->
-  <section class="testimonials">
+  <div class="testimonials">
     <h3>CLIENT TESTIMONIALS</h3>
     <div class="testimonial-layout">
       <div class="testimonial">
@@ -119,27 +119,27 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- gallery section  -->
 
   <!-- destop-gallery -->
-  <section class="gallery desktop-gallery">
+  <div class="gallery desktop-gallery">
     <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk">
     <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
     <img src="images/desktop/image-gallery-cone.jpg" alt="cone">
     <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="suger">
 
-  </section>
+  </div>
 
   <!-- mobile-gallery -->
-   <section class="gallery mobile-gallery">
+   <div class="gallery mobile-gallery">
      <img src="images/mobile/image-gallery-milkbottles.jpg" alt="milk">
      <img src="images/mobile/image-gallery-orange.jpg" alt="orange">
      <img src="images/mobile/image-gallery-cone.jpg" alt="cone">
      <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="suger">
 
-   </section>
+   </div>
 
  <!-- footer section  -->
   <footer>
