--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Barlow|Fraunces" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow&family=Fraunces" rel="stylesheet">
 
   <!-- css files -->
   <link rel="stylesheet" href="css/styles.css">
@@ -87,7 +87,7 @@
   </main>
 
   <!-- testimonial section  -->
-  <div class="testimonials">
+  <div role="main" class="testimonials">
     <h3>CLIENT TESTIMONIALS</h3>
     <div class="testimonial-layout">
       <div class="testimonial">
@@ -124,7 +124,7 @@
   <!-- gallery section  -->
 
   <!-- destop-gallery -->
-  <div class="gallery desktop-gallery">
+  <div role="main" class="gallery desktop-gallery">
     <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk">
     <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
     <img src="images/desktop/image-gallery-cone.jpg" alt="cone">
@@ -133,7 +133,7 @@
   </div>
 
   <!-- mobile-gallery -->
-   <div class="gallery mobile-gallery">
+   <div role="main" class="gallery mobile-gallery">
      <img src="images/mobile/image-gallery-milkbottles.jpg" alt="milk">
      <img src="images/mobile/image-gallery-orange.jpg" alt="orange">
      <img src="images/mobile/image-gallery-cone.jpg" alt="cone">
