--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
         </p>
       </div>
     </div>
-  </main>
-
-  <!-- testimonial section  -->
-  <div role="main" class="testimonials">
+    
+    <!-- testimonial section  -->
+  <div class="testimonials">
     <h3>CLIENT TESTIMONIALS</h3>
     <div class="testimonial-layout">
       <div class="testimonial">
@@ -124,7 +123,7 @@
   <!-- gallery section  -->
 
   <!-- destop-gallery -->
-  <div role="main" class="gallery desktop-gallery">
+  <div  class="gallery desktop-gallery">
     <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk">
     <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
     <img src="images/desktop/image-gallery-cone.jpg" alt="cone">
@@ -133,13 +132,16 @@
   </div>
 
   <!-- mobile-gallery -->
-   <div role="main" class="gallery mobile-gallery">
+   <div  class="gallery mobile-gallery">
      <img src="images/mobile/image-gallery-milkbottles.jpg" alt="milk">
      <img src="images/mobile/image-gallery-orange.jpg" alt="orange">
      <img src="images/mobile/image-gallery-cone.jpg" alt="cone">
      <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="suger">
 
    </div>
+  </main>
+
+  
 
  <!-- footer section  -->
   <footer>
