--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Barlow&family=Fraunces" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow|Fraunces" rel="stylesheet">
 
   <!-- css files -->
   <link rel="stylesheet" href="css/styles.css">
